fixing readability

--- a/app/assets/stylesheets/dashboards.css.scss
+++ b/app/assets/stylesheets/dashboards.css.scss
@@ -25,3 +25,7 @@
       color:#0D9B6D;
    }
 }
+
+.message-sender{
+   color:#0D9B6D;
+}
